[package]
name = "linfa-clustering"
version = "0.5.0"
edition = "2018"
authors = [
    "Luca Palmieri <rust@lpalmieri.com>",
    "xd009642 <danielmckenna93@gmail.com>",
    "Rémi Lafage <remi.lafage@onera.fr>"
]
description = "A collection of clustering algorithms"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa/"
readme = "README.md"

keywords = ["clustering", "machine-learning", "linfa", "k-means", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde", "linfa-nn/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.15", features = ["rayon", "approx"]}
ndarray-linalg = "0.14"
ndarray-rand = "0.14"
ndarray-stats = "0.5"
num-traits = "0.2"
rand_isaac = "0.3"
space = "0.12"
thiserror = "1.0"
partitions = "0.2.4"
linfa = { version = "0.5.0", path = "../..", features = ["ndarray-linalg"] }
linfa-nn = { version = "0.5.0", path = "../linfa-nn" }
noisy_float = "0.2.0"

[dev-dependencies]
ndarray-npy = { version = "0.8", default-features = false }
linfa-datasets = { version = "0.5.0", path = "../../datasets", features = ["generate"] }
criterion = "0.3.5"
serde_json = "1"
approx = "0.4"
lax = "0.2.0"

[[bench]]
name = "k_means"
harness = false

[[bench]]
name = "dbscan"
harness = false

[[bench]]
name = "appx_dbscan"
harness = false

[[bench]]
name = "gaussian_mixture"
harness = false
