[package]
name = "linfa-clustering"
version = "0.8.0"
edition = "2018"
authors = [
    "Luca Palmieri <rust@lpalmieri.com>",
    "xd009642 <danielmckenna93@gmail.com>",
    "Rémi Lafage <remi.lafage@onera.fr>",
]
description = "A collection of clustering algorithms"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ml/linfa/"
readme = "README.md"

keywords = [
    "clustering",
    "machine-learning",
    "linfa",
    "k-means",
    "unsupervised",
]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
blas = []
serde = ["serde_crate", "ndarray/serde", "linfa-nn/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.16", features = ["rayon", "approx"] }
linfa-linalg = { version = "0.2", default-features = false }
ndarray-linalg = { version = "0.17", optional = true }
ndarray-rand = "0.16"
ndarray-stats = "0.6"
num-traits = "0.2"
rand_xoshiro = "0.6"
space = "0.19"
thiserror = "2.0"
linfa = { version = "0.8.0", path = "../.." }
linfa-nn = { version = "0.8.0", path = "../linfa-nn" }
noisy_float = "0.2.0"

[dev-dependencies]
ndarray-npy = { version = "0.9", default-features = false }
linfa-datasets = { version = "0.8.0", path = "../../datasets", features = [
    "generate",
] }
criterion = "0.5"
serde_json = "1"
approx = "0.5"
lax = "=0.17.0"
linfa = { version = "0.8.0", path = "../..", features = ["benchmarks"] }

[[bench]]
name = "k_means"
harness = false

[[bench]]
name = "dbscan"
harness = false

[[bench]]
name = "gaussian_mixture"
harness = false
