[package]
name = "linfa-elasticnet"
version = "0.5.0"
authors = [
    "Paul Körbitz / Google <koerbitz@google.com>",
    "Lorenz Schmidt <bytesnake@mailbox.org>"
]

description = "A Machine Learning framework for Rust"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ai", "ml", "linear"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde", "linfa/serde"]
blas = ["ndarray-linalg", "linfa/ndarray-linalg"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.15", features = ["approx"]}
ndarray-linalg-rs = { git = "https://github.com/rust-ml/ndarray-linalg-rs.git" }
ndarray-linalg = { version = "0.14", optional = true }

num-traits = "0.2"
approx = "0.4"
thiserror = "1.0"

linfa = { version = "0.5.0", path = "../.." }

[dev-dependencies]
linfa-datasets = { version = "0.5.0", path = "../../datasets", features = ["diabetes"] }
ndarray-rand = "0.14"
rand_isaac = "0.3"
