[package]
name = "linfa-elasticnet"
version = "0.7.1"
authors = [
    "Paul Körbitz / Google <koerbitz@google.com>",
    "Lorenz Schmidt <bytesnake@mailbox.org>",
]

description = "A Machine Learning framework for Rust"
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ai", "ml", "linear"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde", "linfa/serde"]
blas = ["ndarray-linalg", "linfa/ndarray-linalg"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.16", features = ["approx"] }
linfa-linalg = { version = "0.2", default-features = false }
ndarray-linalg = { version = "0.17", optional = true }

num-traits = "0.2"
approx = "0.5"
thiserror = "2.0"

linfa = { version = "0.7.1", path = "../.." }

[dev-dependencies]
linfa-datasets = { version = "0.7.1", path = "../../datasets", features = [
    "diabetes",
    "linnerud",
] }
ndarray-rand = "0.15"
rand_xoshiro = "0.6"
