[package]
name = "linfa-ensemble"
version = "0.1.0"
edition = "2021"
authors = ["Khushi Mahesh <km1139@rit.edu>", "Anurag Chandra <ac5068@rit.edu>", "Parijat Kawale <pk7145@rit.edu>"]
description = "A general method for creating ensemble classifiers"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"

keywords = ["machine-learning", "linfa", "ensemble"]
categories = ["algorithms", "mathematics", "science"]

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
linfa = { version = "0.7.0", path = "../.." }
linfa-trees = { version = "0.7.0", path = "../linfa-trees"}
linfa-datasets = { version = "0.7.0", path = "../../datasets/", features = ["iris"] }
ndarray = { version = "0.15" , features = ["rayon", "approx"]}
ndarray-rand = "0.14"
rand = { version = "0.8", features = ["small_rng"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }
[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
linfa-datasets = { version = "0.7.0", path = "../../datasets/", features = ["iris"] }


[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "linfa_ensemble"