[package]
name = "linfa-ensemble"
version = "0.8.0"
edition = "2018"
authors = [
    "James Knight <jamesknight@hadean.com>",
    "James Kay <james@hadean.com>",
]
description = "A general method for creating ensemble classifiers"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ensemble"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.16", features = ["rayon", "approx"] }
ndarray-rand = "0.15"
rand = "0.8.5"

linfa = { version = "0.8.0", path = "../.." }
linfa-trees = { version = "0.8.0", path = "../linfa-trees" }

[dev-dependencies]
linfa-datasets = { version = "0.8.0", path = "../../datasets/", features = [
    "iris",
] }
