[package]
name = "linfa-ftrl"
version = "0.8.0"
authors = ["Liudmyla Kyrashchuk <himila@tutanota.com>"]

description = "A Machine Learning framework for Rust"
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ai", "ml", "ftrl"]
categories = ["algorithms", "mathematics", "science"]

[features]
serde = ["serde_crate", "linfa/serde", "ndarray/serde", "argmin/serde1"]
wasm-bindgen = ["argmin/wasm-bindgen"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
features = ["derive"]

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15.0"
argmin = { version = "0.11.0", default-features = false }
argmin-math = { version = "0.5", features = ["ndarray_v0_16-nolinalg"] }
thiserror = "2.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

linfa = { version = "0.8.0", path = "../.." }

[dev-dependencies]
criterion = "0.7"
approx = "0.5"
linfa-datasets = { version = "0.8.0", path = "../../datasets", features = [
    "winequality",
] }
linfa = { version = "0.8.0", path = "../..", features = ["benchmarks"] }

[[bench]]
name = "ftrl"
harness = false
