[package]
name = "linfa-hierarchical"
version = "0.8.0"
authors = ["Lorenz Schmidt <lorenz.schmidt@mailbox.org>"]
edition = "2018"

description = "Agglomerative Hierarchical clustering"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = [
    "hierachical",
    "agglomerative",
    "clustering",
    "machine-learning",
    "linfa",
]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.16" }
kodama = "0.2"
thiserror = "2"

linfa = { version = "0.8.1", path = "../.." }
linfa-kernel = { version = "0.8.0", path = "../linfa-kernel" }

[dev-dependencies]
rand = "0.8"
ndarray-rand = "0.15"
linfa-datasets = { version = "0.8.0", path = "../../datasets", features = [
    "iris",
] }
