[package]
name = "linfa-ica"
version = "0.3.1"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
description = "A collection of Independent Component Analysis (ICA) algorithms"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["factorization", "machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde"]                                                     

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.14", default-features = false }
ndarray-linalg = "0.13"
ndarray-rand = "0.13"
ndarray-stats = "0.4"
num-traits = "0.2"
rand_isaac = "0.3"
thiserror = "1"

linfa = { version = "0.3.1", path = "../..", features = ["ndarray-linalg"] }

[dev-dependencies]
ndarray-npy = { version = "0.7", default-features = false }
paste = "1.0"
