[package]
name = "linfa-ica"
version = "0.8.0"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
description = "A collection of Independent Component Analysis (ICA) algorithms"
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["factorization", "machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
blas = ["ndarray-linalg", "linfa/ndarray-linalg"]
serde = ["serde_crate", "ndarray/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.16" }
linfa-linalg = { version = "0.2", default-features = false }
ndarray-linalg = { version = "0.17", optional = true }
ndarray-rand = "0.15"
ndarray-stats = "0.6"
num-traits = "0.2"
rand_xoshiro = "0.6"
thiserror = "2.0"

linfa = { version = "0.8.1", path = "../.." }

[dev-dependencies]
ndarray-npy = { version = "0.9", default-features = false }
paste = "1.0"
criterion = "0.5"
linfa = { version = "0.8.1", path = "../..", features = ["benchmarks"] }

[[bench]]
name = "fast_ica"
harness = false
