[package]
name = "linfa-kernel"
version = "0.3.1"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "Kernel methods for non-linear algorithms"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["kernel", "machine-learning", "linfa"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde", "sprs/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = "0.14"
num-traits = "0.2"
sprs = { git="https://github.com/vbarrielle/sprs.git", rev="761d4f0", default-features = false }
hnsw = "0.6"
space = "0.10"

linfa = { version = "0.3.1", path = "../.." }
