[package]
name = "linfa-kernel"
version = "0.4.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "Kernel methods for non-linear algorithms"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["kernel", "machine-learning", "linfa"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde", "sprs/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = "0.15"
num-traits = "0.2"
sprs = { version="0.11.0", default-features = false }
hnsw = "0.6.1"
space = "0.10"

linfa = { version = "0.4.0", path = "../.." }
