[package]
name = "linfa-kernel"
version = "0.7.1"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "Kernel methods for non-linear algorithms"
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["kernel", "machine-learning", "linfa"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde", "sprs/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = "0.16"
num-traits = "0.2"
sprs = { version = "0.11", default-features = false }

linfa = { version = "0.7.1", path = "../.." }
linfa-nn = { version = "0.7.2", path = "../linfa-nn" }
