[package]
name = "linfa-linear"
version = "0.6.0"
authors = [
    "Paul Körbitz / Google <koerbitz@google.com>",
    "VasanthakumarV <vasanth260m12@gmail.com>"
]

description = "A Machine Learning framework for Rust"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ai", "ml", "linear"]
categories = ["algorithms", "mathematics", "science"]

[features]
blas = ["ndarray-linalg", "linfa/ndarray-linalg"]
serde = ["serde_crate", "ndarray/serde", "argmin-math/ndarray_v0_15-nolinalg-serde" ]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.15", features = ["approx"] }
linfa-linalg = { version = "0.1", default-features = false }
ndarray-linalg = { version = "0.15", optional = true }
num-traits = "0.2"
argmin = { version = "0.7.0", default-features = false }
argmin-math = { version = "0.2.0", default-features = false, features = ["ndarray_v0_15-nolinalg"] }

thiserror = "1.0"

linfa = { version = "0.6.0", path = "../.." }

[dev-dependencies]
linfa-datasets = { version = "0.6.0", path = "../../datasets", features = ["diabetes"] }
approx = "0.4"
