[package]
name = "linfa-linear"
version = "0.7.1"
authors = [
    "Paul Körbitz / Google <koerbitz@google.com>",
    "VasanthakumarV <vasanth260m12@gmail.com>",
]

description = "A Machine Learning framework for Rust"
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ai", "ml", "linear"]
categories = ["algorithms", "mathematics", "science"]

[features]
blas = ["ndarray-linalg", "linfa/ndarray-linalg"]
serde = ["serde_crate", "linfa/serde", "ndarray/serde", "argmin/serde1"]
wasm-bindgen = ["argmin/wasm-bindgen"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.16", features = ["approx"] }
linfa-linalg = { version = "0.2", default-features = false }
ndarray-linalg = { version = "0.17", optional = true }
num-traits = "0.2"
argmin = { version = "0.10.0", default-features = false, git = "https://github.com/argmin-rs/argmin.git" }
argmin-math = { version = "0.4", features = [
    "ndarray_v0_16-nolinalg",
], git = "https://github.com/argmin-rs/argmin.git" }
thiserror = "2.0"

linfa = { version = "0.7.1", path = "../.." }

[dev-dependencies]
linfa-datasets = { version = "0.7.1", path = "../../datasets", features = [
    "diabetes",
] }
approx = "0.5"
criterion = "0.5"
statrs = "0.18"
linfa = { version = "0.7.1", path = "../..", features = ["benchmarks"] }

[[bench]]
name = "ols_bench"
harness = false
